service/build_errors.txt
   Compiling framework-control v0.4.3 (C:\Users\Taylor Allred\Documents\Files\projects\framework-control-native\service)
error[E0433]: failed to resolve: could not find `UI` in `Win32`
  --> src\ec.rs:6:21
   |
 6 | use windows::Win32::UI::Shell::ShellExecuteW;
   |                     ^^ could not find `UI` in `Win32`
   |
note: found an item that was configured out
  --> C:\Users\Taylor Allred\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.62.2\src\Windows\Win32\mod.rs:30:9
   |
29 | #[cfg(feature = "Win32_UI")]
   |       -------------------- the item is gated behind the `Win32_UI` feature
30 | pub mod UI;
   |         ^^

error[E0433]: failed to resolve: could not find `UI` in `Win32`
  --> src\ec.rs:7:21
   |
 7 | use windows::Win32::UI::WindowsAndMessaging::SW_SHOW;
   |                     ^^ could not find `UI` in `Win32`
   |
note: found an item that was configured out
  --> C:\Users\Taylor Allred\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.62.2\src\Windows\Win32\mod.rs:30:9
   |
29 | #[cfg(feature = "Win32_UI")]
   |       -------------------- the item is gated behind the `Win32_UI` feature
30 | pub mod UI;
   |         ^^

For more information about this error, try `rustc --explain E0433`.
error: could not compile `framework-control` (bin "framework-control") due to 2 previous errors
